--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="wrapper">
                   <div class="price-input">
                     <div class="field">
-                      <span>Price:min</span>
+                      <span><nobr>Price: min</nobr></span>
                       <input type="number" class="input-min" value="2500">
                     </div>
                     <div class="separator">-</div>
