--- a/index.html
+++ b/index.html
@@ -150,28 +150,29 @@
 
           <div id="third-column">
 
-              <div>
-                <div class="wrapper">
-                  <div class="price-input">
-                    <div class="field">
-                      <span><nobr>Price: min</nobr></span>
-                      <input type="number" class="input-min" value="2500">
-                    </div>
-                    <div class="separator">-</div>
-                    <div class="field">
-                        <span>max</span>
-                        <input type="number" class="input-max" value="7500">
-                    </div>
-                  </div>
-                <div class="slider_">
-                  <div class="progress"></div>
-                </div>
-                <div class="range-input">
-                  <input type="range" class="range-min" min="0" max="10000" value="2500" step="100">
-                  <input type="range" class="range-max" min="0" max="10000" value="7500" step="100">
-                </div>
-              </div>
-          </div>
+    <div class="wrapper">
+
+      <div class="price-input">
+        <div class="field">
+          <span><nobr>Price: min </nobr></span>
+          <input type="number" class="input-min" value="2500">
+        </div>
+        <div class="separator">-</div>
+        <div class="field">
+          <span>max:</span>
+          <input type="number" class="input-max" value="7500">
+        </div>
+      </div>
+      <div class="slider_">
+        <div class="progress"></div>
+      </div>
+      <div class="range-input">
+        <input type="range" class="range-min" min="0" max="10000" value="2500" step="100">
+        <input type="range" class="range-max" min="0" max="10000" value="7500" step="100">
+      </div>
+    </div>
+ <script src="script.js"></script>
+
         </div>
 
         <div id="forth-column">
@@ -196,12 +197,12 @@
       </div>
 
     </div>
-
+<script src="main.js"></script>
     <div class="rectangle" >
       <input  type="text" id="search" placeholder="">
       <p class="above-search">If you didn’t find necessary information, enter what you want here</p>
             
     </div>
-
+  
   </body>
 </html>
