personal page creating

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <h1 class="logo">SkyLand</h1>
 
       <ul class="nav-links">
-        <li id="aboutUs"><a href="#"></a>About us</li>
-        <li><a href="#"></a>Sign in </li>
+        <li id="aboutUs"><a href="AboutUsPage.html">About us</a></li>
+        <li><a href="LoginPage.html">Sign in</a> </li>
         <li><a href="#"></a> | </li>
-        <li><a href="#"></a>Sign up</li>
-        <li id="userAccount"><a href="#"></a></li>
+        <li><a href="RegisterPage.html">Sign up</a></li>
+        <li id="userAccount"><a href="UserPage.html"></a></li>
 
       </ul>
     </nav>
